@@ -1,6 +1,7 @@
 mintupdate (4.2.3) katya; urgency=low
 
   * Removed warning and extra info tabs
+  * Asynchronous changelog retrieval
 
  -- Clement Lefebvre <root@linuxmint.com>  Wed,  23 Mar 2011 13:23:00 +0000
 
